added basic other main pages

--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
           <a class="navbar-brand" href="#">Vi-Linh Nguyen</a>
         </div>
         <ul class="nav navbar-nav navbar-right">
-          <li class="active"><a href="#">Home</a></li>
-          <li><a href="#">Projects</a></li>
-          <li><a href="#">About</a></li>
+          <li class="active"><a href="/index.html">Home</a></li>
+          <li><a href="/projects.html">Projects</a></li>
+          <li><a href="/about.html">About</a></li>
         </ul>
       <!-- </div> -->
     </nav>
@@ -40,6 +40,7 @@
           <img class="doglogo" src="./assets/dogLOGO.png" alt="logo">
           <h3>Hello!</h3>
           <h4>I do code and art stuff</h4>
+          <h5>Scroll Down to see some featured projects</h5>
         </div>
       </div>
       <!--end of intro-->
@@ -49,7 +50,7 @@
         <div id="project-grid" class="row text-center">
           <div id="project-grid-item" class="col-lg-6 col-md-6 mb-12 mb-md-0">
            <a href="#">
-             <img src="" alt="time to talk"/>
+             <img class="" src="" alt="time to talk"/>
             </a>
           </div>
 
