fix footer, move images and add images to project grid

--- a/index.html
+++ b/index.html
@@ -50,26 +50,28 @@
         <div id="project-grid" class="row text-center">
           <div id="project-grid-item" class="col-lg-6 col-md-6 mb-12 mb-md-0">
            <a href="#">
-             <img class="" src="" alt="time to talk"/>
+             <img class="project-grid-item-img" src="./assets/timeToTalk-itchioCoverArtboard-1.png" alt="time to talk"/>
             </a>
           </div>
 
           <div id="project-grid-item" class="col-lg-6 col-md-6 mb-12 mb-md-0">
             <a href="#">
-              <img src="" alt="Cartridge Collector" />
+              <img class="project-grid-item-img" src="./assets/cartridgecollector.JPG" alt="Cartridge Collector" />
             </a>
           </div>
 
           <div id="project-grid-item" class="col-lg-6 col-md-6 mb-12 mb-md-0">
-            <a href="#"><img src="" alt="Twitter Bookmarks" /></a>
+            <a href="#">
+              <img  class="project-grid-item-img" src="" alt="Twitter Bookmarks" />
+            </a>
           </div>
 
           <div id="project-grid-item" class="col-lg-6 col-md-6 mb-12 mb-md-0">
-            <a href="#"><img src="" alt="HellGhost"/></a>
+            <a href="#"><img  class="project-grid-item-img" src="./assets/ghost01.JPG" alt="HellGhost"/></a>
           </div>
 
           <div id="project-grid-item" class="col-lg-6 col-md-6 mb-12 mb-md-0">
-            <a href="#"><img src="" alt="carrd.co clone"></a>
+            <a href="#"><img  class="project-grid-item-img" src="" alt="carrd.co clone"></a>
           </div>
 
           <div id="project-grid-item" class="col-lg-6 col-md-6 mb-12 mb-md-0">
@@ -81,7 +83,7 @@
     </main><!--end of main container-->
 
     <!--footer-->
-    <div class="navbar navbar-fixed-bottom" id="footer">
+    <div class="navbar" id="footer">
       <!--Grid ctonainer-->
       <div class="container p-3 text-center">
         <!--Grid row-->
