--- a/projects.html
+++ b/projects.html
@@ -41,7 +41,7 @@
         <!--end of main container-->
 
         <!--footer-->
-        <div class="navbar navbar-fixed-bottom" id="footer">
+        <div class="navbar" id="footer">
             <!--Grid ctonainer-->
             <div class="container p-3 text-center">
                 <!--Grid row-->
