add some cv stuff

--- a/about.html
+++ b/about.html
@@ -36,7 +36,76 @@
 
     <!--main content-->
     <main class="container p-1" id="mainhome">
-        main stuff projects
+        <!--about me-->
+        <div class="row">
+            <!--me pic-->
+            <div class="col-lg-1 col-md-1">
+                me pic
+            </div>
+            <!--me blurb-->
+            <div class="col-lg-1 col-md-1">
+                me blurb
+            </div>
+            <!--resume button-->
+            <div class="col-lg-1 col-md-1">
+                resume button
+            </div>
+        </div>
+        <!--cv-->
+        <div class="row">
+            <div class="col">
+                <div id="cv-header">
+                    <h4>CV</h4>
+                </div>
+                <div id="skills">
+                    <h5>Skills</h5>
+                    <h6>
+                        HTML, CSS, SQL, React.js, Java, Python, C#,
+                        Adobe Photoshop, Adobe Illustrator, French Fluency,Vietnamese Fluency,
+                        Microsoft Word, Microsoft Powerpoint
+                    </h6>
+                </div>
+                <div id="work-xp">
+                    <h5>Work Experience</h5>
+                    <div id="hugs">
+                        <h6>
+                            HUGS International, Remote
+                            Frontend Developer Intern Feb 2022 - MAY 2022
+                        </h6>
+                        <ul>
+                            <li>Help develop responsive website pages as needed by the product manager.</li>
+                            <li>Fix bugs as needed by the product manager.</li>
+                        </ul>
+                    </div>
+                    <div id="superworld">
+                        <h6>
+                            SuperWorld, Remote
+                            Frontend Developer Intern Jan 2021 - Jun 2021
+                            ● Help develop responsive website and web applications according to
+                            designs from the UX team.
+                            ● Help Optimize according to specifications of product manager and
+                            lead developer.
+                        </h6>
+                    </div>
+                    <div id="sitara">
+                        <h6>
+                            Sitara Om, Chicago — Henna Artist/Cashier Jul 2019 2019 - Apr 2020
+                            ● Deliver quality henna designs to customer according to chosen design
+                            ● Process merchandise in efficient and friendly manner to customer
+                        </h6>
+                    </div>
+                </div>
+                <div id="projects">
+                    <h5>Projects</h5>
+                </div>
+                <div id="education">
+                    <h5>Education</h5>
+                </div>
+                <div id="rel-cw">
+                    <h5>Relavent Coursework</h5>
+                </div>
+            </div>
+        </div>
     </main>
     <!--end of main container-->
 
