add some about me shit

--- a/about.html
+++ b/about.html
@@ -37,26 +37,37 @@
     <!--main content-->
     <main class="container p-1" id="mainhome">
         <!--about me-->
-        <div class="row">
+        <div class="row text-center">
             <!--me pic-->
-            <div class="col-lg-1 col-md-1">
-                me pic
+            <div class="col-lg-12 col-md-12">
+                <img src="./assets/mepic.jpg" alt="Me picture"/>
             </div>
             <!--me blurb-->
-            <div class="col-lg-1 col-md-1">
-                me blurb
+            <div class="col-lg-12 col-md-12">
+                <p>
+                    Hello. I am an alumni from Columbia College Chicago,
+                    currently studying for a Masters of Science at DePaul.
+                    Computer Science has offered me a flexibility that
+                    satisfies the technical side of my brain into building sites
+                    and apps for people to interact with.
+                </p>
             </div>
             <!--resume button-->
-            <div class="col-lg-1 col-md-1">
-                resume button
+            <div class="col-lg-12 col-md-12">
+                <button>View Resume</button>
             </div>
         </div>
+        <!--end of about me blurb-->
+
         <!--cv-->
         <div class="row">
+            <!--grid column-->
             <div class="col">
-                <div id="cv-header">
+                <!--cv header-->
+                <div  class="text-center" id="cv-header">
                     <h4>CV</h4>
                 </div>
+                <!--skills-->
                 <div id="skills">
                     <h5>Skills</h5>
                     <h6>
@@ -65,6 +76,7 @@
                         Microsoft Word, Microsoft Powerpoint
                     </h6>
                 </div>
+                <!--work experience-->
                 <div id="work-xp">
                     <h5>Work Experience</h5>
                     <div id="hugs">
@@ -81,31 +93,102 @@
                         <h6>
                             SuperWorld, Remote
                             Frontend Developer Intern Jan 2021 - Jun 2021
-                            ● Help develop responsive website and web applications according to
-                            designs from the UX team.
-                            ● Help Optimize according to specifications of product manager and
-                            lead developer.
                         </h6>
+                        <ul>
+                            <li>Help develop responsive website and web applications according to
+                            designs from the UX team.</li>
+                            <li>Help Optimize according to specifications of product manager and
+                            lead developer.</li>
+                        </ul>
                     </div>
                     <div id="sitara">
                         <h6>
                             Sitara Om, Chicago — Henna Artist/Cashier Jul 2019 2019 - Apr 2020
-                            ● Deliver quality henna designs to customer according to chosen design
-                            ● Process merchandise in efficient and friendly manner to customer
+                        </h6>
+                        <ul>
+                            <li>
+                                Deliver quality henna designs to customer according to chosen design.
+                            </li>
+                            <li>
+                                Process merchandise in efficient and friendly manner to customer.
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <!--end of work experience-->
+
+                <!--projects-->
+                <div id="projects">
+                    <h5>Projects</h5>
+                    <div>
+                        <h6>Church Website — Dec 2020 - Present</h6>
+                        <ul>
+                            <li>Build website for insitutution using design principles and markup languages
+                        to learn how interactivity works on the web.</li>
+                        </ul>
+                    </div>
+                    <div>
+                        <h6>
+                            HellGhost — Aug 2020- Sep 2020
+                        </h6>
+                        <ul>
+                            <li>
+                                Build endless runner game to learn about how C# mechanics work in Unity game engine.
+                            </li>
+                        </ul>
+                    </div>
+                    <div>
+                        <h6>Time to Talk — Jun 2020 - Sep 2020</h6>
+                        <ul>
+                            <li>Build visual novel game to learn basics of game story building and introductory
+                        game engine mechanics.</li>
+                        </ul>
+                    </div>
+                </div>
+                <!--end of projects-->
+
+                <!--education-->
+                <div id="education">
+                    <h5>Education</h5>
+                    <div>
+                        <h6>
+                            DePaul University, Chicago — M.S. <br/>
+                            September 2019 - March 2023 <br/>
+                            Computer Science with a Human Computer Interaction Concentration
+                        </h6>
+                    </div>
+                    <div>
+                        <h6>
+                            Columbia College, Chicago — B.A. <br/>
+                            September 2015 - December 2018 <br/>
+                            Cinema Arts and Sciences with an Animation Concentration Trustee Award Recipient
                         </h6>
                     </div>
                 </div>
-                <div id="projects">
-                    <h5>Projects</h5>
-                </div>
-                <div id="education">
-                    <h5>Education</h5>
-                </div>
+                <!--end of education-->
+
+                <!--relevant coursework-->
                 <div id="rel-cw">
                     <h5>Relavent Coursework</h5>
+                    <div>
+                        <h6>
+                            <ul>
+                                <li>Introduction to Programming</li>
+                                <li>Discrete Math</li>
+                                <li>Applied Algorithms</li>
+                                <li>Data Structures</li>
+                                <li>Systems</li>
+                                <li>Information Architectures</li>
+                            </ul>
+                        </h6>
+                    </div>
                 </div>
+                <!--end of relevant coursework-->
+
             </div>
+            <!--end of grid column-->
         </div>
+        <!--end of cv / grid row-->
     </main>
     <!--end of main container-->
 
