styling and add new image

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
           </div>
 
           <div id="project-grid-item" class="col-lg-6 col-md-6 mb-12 mb-md-0">
-            <a href="#"><img  class="project-grid-item-img" src="" alt="carrd.co clone"></a>
+            <a href="#"><img  class="project-grid-item-img" src="./assets/cardclone.jpg" alt="carrd.co clone"></a>
           </div>
 
           <div id="project-grid-item" class="col-lg-6 col-md-6 mb-12 mb-md-0">
