--- a/about.html
+++ b/about.html
@@ -37,10 +37,10 @@
     <!--main content-->
     <main class="container p-1" id="mainhome">
         <!--about me-->
-        <div class="row text-center">
+        <div id="meblurb" class="row text-center">
             <!--me pic-->
             <div class="col-lg-12 col-md-12">
-                <img src="./assets/mepic.jpg" alt="Me picture"/>
+                <img class="media" src="./assets/mepic.jpg" alt="Me picture"/>
             </div>
             <!--me blurb-->
             <div class="col-lg-12 col-md-12">
@@ -54,13 +54,13 @@
             </div>
             <!--resume button-->
             <div class="col-lg-12 col-md-12">
-                <button>View Resume</button>
+                <button class="btn-primary">View Resume</button>
             </div>
         </div>
         <!--end of about me blurb-->
 
         <!--cv-->
-        <div class="row">
+        <div id="cv" class="row">
             <!--grid column-->
             <div class="col">
                 <!--cv header-->
