add in overlay fade in for project grids

--- a/about.html
+++ b/about.html
@@ -64,7 +64,7 @@
             <!--grid column-->
             <div class="col">
                 <!--cv header-->
-                <div  class="text-center" id="cv-header">
+                <div  class="text-center page-header" id="cv-header">
                     <h4>CV</h4>
                 </div>
                 <!--skills-->
