--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <main class="container p-1" id="mainhome">
       <!--intro-->
       <div class="row" id="introcontent">
-        <div class="col-lg-12 col-md-12 mb-12 mb-md-0">
+        <div class="col-lg-12 col-md-12 mb-12 mb-md-0 page-header">
           <img class="doglogo" src="./assets/dogLOGO.png" alt="logo">
           <h3>Hello!</h3>
           <h4>I do code and art stuff</h4>
@@ -49,33 +49,51 @@
       <div class="container p-2">
         <div id="project-grid" class="row text-center">
           <div id="project-grid-item" class="col-lg-6 col-md-6 mb-12 mb-md-0">
-           <a href="#">
+            <a href="#">
              <img class="project-grid-item-img" src="./assets/timeToTalk-itchioCoverArtboard-1.png" alt="time to talk"/>
             </a>
+            <div class="overlay">
+              <div class="overlay-text">Time to Talk</div>
+            </div>
           </div>
 
           <div id="project-grid-item" class="col-lg-6 col-md-6 mb-12 mb-md-0">
             <a href="#">
               <img class="project-grid-item-img" src="./assets/cartridgecollector.JPG" alt="Cartridge Collector" />
             </a>
+            <div class="overlay">
+              <div class="overlay-text">Cartridge Collector</div>
+            </div>
           </div>
 
           <div id="project-grid-item" class="col-lg-6 col-md-6 mb-12 mb-md-0">
             <a href="#">
               <img  class="project-grid-item-img" src="" alt="Twitter Bookmarks" />
             </a>
+            <div class="overlay">
+              <div class="overlay-text">Twitter Bookmarks Storage</div>
+            </div>
           </div>
 
           <div id="project-grid-item" class="col-lg-6 col-md-6 mb-12 mb-md-0">
             <a href="#"><img  class="project-grid-item-img" src="./assets/ghost01.JPG" alt="HellGhost"/></a>
+            <div class="overlay">
+              <div class="overlay-text">HellGhost</div>
+            </div>
           </div>
 
           <div id="project-grid-item" class="col-lg-6 col-md-6 mb-12 mb-md-0">
             <a href="#"><img  class="project-grid-item-img" src="./assets/cardclone.jpg" alt="carrd.co clone"></a>
+            <div class="overlay">
+              <div class="overlay-text">Carrd.co Clone</div>
+            </div>
           </div>
 
           <div id="project-grid-item" class="col-lg-6 col-md-6 mb-12 mb-md-0">
             <a href="#">ios booktracker app</a>
+            <div class="overlay">
+              <div class="overlay-text">IOS Booktracker App</div>
+            </div>
           </div>
         </div>
       </div>
