adding some projects

--- a/projects.html
+++ b/projects.html
@@ -179,6 +179,13 @@
                 </div>
                 <div id="project-grid" class="row text-center">
                     <div id="project-grid-item" class="col-lg-6 col-md-6 mb-12 mb-md-0">
+                        <a href="#"><img class="project-grid-item-img" src="" alt="Rouyn-Noranda Welcomes You"></a>
+                        <div class="overlay">
+                            <div class="overlay-text">Rouyn-Noranda Welcomes You</div>
+                        </div>
+                    </div>
+
+                    <div id="project-grid-item" class="col-lg-6 col-md-6 mb-12 mb-md-0">
                         <a href="#">
                             <img class="project-grid-item-img" src="./assets/art/ella-collab/foottown.jpg" alt="Chili Girl Film Pitch Collab" />
                         </a>
@@ -213,16 +220,23 @@
                     </div>
             
                     <div id="project-grid-item" class="col-lg-6 col-md-6 mb-12 mb-md-0">
-                        <a href="#"><img class="project-grid-item-img" src="" alt="Rouyn-Noranda Welcomes You"></a>
-                        <div class="overlay">
-                            <div class="overlay-text">Rouyn-Noranda Welcomes You</div>
-                        </div>
-                    </div>
-            
-                    <div id="project-grid-item" class="col-lg-6 col-md-6 mb-12 mb-md-0">
                         <a href="#"><img class="project-grid-item-img" src="./assets/marlowe.jpg" alt="Character Art" /></a>
                         <div class="overlay">
                             <div class="overlay-text">Character Art</div>
+                        </div>
+                    </div>
+
+                    <div id="project-grid-item" class="col-lg-6 col-md-6 mb-12 mb-md-0">
+                        <a href="#"><img class="project-grid-item-img" src="" alt="Layouts" /></a>
+                        <div class="overlay">
+                            <div class="overlay-text">Layouts</div>
+                        </div>
+                    </div>
+
+                    <div id="project-grid-item" class="col-lg-6 col-md-6 mb-12 mb-md-0">
+                        <a href="#"><img class="project-grid-item-img" src="" alt="3D Work"></a>
+                        <div class="overlay">
+                            <div class="overlay-text">3D Work</div>
                         </div>
                     </div>
                 </div>
