add in images for project grid

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
           <div id="project-grid-item" class="col-lg-6 col-md-6 mb-12 mb-md-0">
             <a href="#">
-              <img  class="project-grid-item-img" src="" alt="Twitter Bookmarks" />
+              <img  class="project-grid-item-img" src="./assets/twitter-bookmarks.jpg" alt="Twitter Bookmarks" />
             </a>
             <div class="overlay">
               <div class="overlay-text">Twitter Bookmarks Storage</div>
