--- a/projects.html
+++ b/projects.html
@@ -66,7 +66,7 @@
                 <div id="project-grid" class="row text-center">
                     <div id="project-grid-item" class="col-lg-6 col-md-6 mb-12 mb-md-0">
                         <a href="#">
-                            <img class="project-grid-item-img" src=""
+                            <img class="project-grid-item-img" src="./assets/portfolio-site-old.jpg"
                                 alt="Portfolio Site Overhaul" />
                         </a>
                         <div class="overlay">
@@ -76,7 +76,7 @@
             
                     <div id="project-grid-item" class="col-lg-6 col-md-6 mb-12 mb-md-0">
                         <a href="#">
-                            <img class="project-grid-item-img" src="" alt="Twitter Bookmarks Storage" />
+                            <img class="project-grid-item-img" src="./assets/twitter-bookmarks.jpg" alt="Twitter Bookmarks Storage" />
                         </a>
                         <div class="overlay">
                             <div class="overlay-text">Twitter Bookmarks Storage</div>
