adding thumbnails to project grid

--- a/projects.html
+++ b/projects.html
@@ -38,7 +38,7 @@
         <nav class="subnav">
             <ul class="nav nav-justified">
                 <li class="nav-item">
-                    <a class="nav-link" href="">Programming</a>
+                    <a class="nav-link" href="">Code</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="">Miscellaneous</a>
@@ -58,10 +58,10 @@
             </div>
             <!--end of intro-->
 
-            <!--programming proj-->
+            <!--Code proj-->
             <div id="programproj" class="container p-2">
                 <div class="container text-center page-header">
-                    <h4>Programming</h4>
+                    <h4>Code</h4>
                 </div>
                 <div id="project-grid" class="row text-center">
                     <div id="project-grid-item" class="col-lg-6 col-md-6 mb-12 mb-md-0">
@@ -85,7 +85,7 @@
             
                     <div id="project-grid-item" class="col-lg-6 col-md-6 mb-12 mb-md-0">
                         <a href="#">
-                            <img class="project-grid-item-img" src="" alt="Church Website" />
+                            <img class="project-grid-item-img" src="./assets/church-website.jpg" alt="Church Website" />
                         </a>
                         <div class="overlay">
                             <div class="overlay-text">Church Website</div>
@@ -93,7 +93,7 @@
                     </div>
             
                     <div id="project-grid-item" class="col-lg-6 col-md-6 mb-12 mb-md-0">
-                        <a href="#"><img class="project-grid-item-img" src="" alt="StoryPlanner Site" /></a>
+                        <a href="#"><img class="project-grid-item-img" src="./assets/storyplanner.jpg" alt="StoryPlanner Site" /></a>
                         <div class="overlay">
                             <div class="overlay-text">StoryPlanner Site</div>
                         </div>
@@ -170,7 +170,7 @@
                     </div>
                 </div>
             </div>
-            <!--end of programming proj-->
+            <!--end of Code proj-->
 
             <!--misc proj-->
             <div id="miscproj" class="container p-2">
@@ -227,14 +227,14 @@
                     </div>
 
                     <div id="project-grid-item" class="col-lg-6 col-md-6 mb-12 mb-md-0">
-                        <a href="#"><img class="project-grid-item-img" src="" alt="Layouts" /></a>
+                        <a href="#"><img class="project-grid-item-img" src="./assets/art/layouts/layout5.jpg" alt="Layouts" /></a>
                         <div class="overlay">
                             <div class="overlay-text">Layouts</div>
                         </div>
                     </div>
 
                     <div id="project-grid-item" class="col-lg-6 col-md-6 mb-12 mb-md-0">
-                        <a href="#"><img class="project-grid-item-img" src="" alt="3D Work"></a>
+                        <a href="#"><img class="project-grid-item-img" src="./assets/art/3dwork/skull3.jpg" alt="3D Work"></a>
                         <div class="overlay">
                             <div class="overlay-text">3D Work</div>
                         </div>
