--- a/projects.html
+++ b/projects.html
@@ -21,7 +21,7 @@
     </head>
 
     <body class="d-flex flex-column min-vh-100">
-        <nav class="navbar navbar-default">
+        <nav class="navbar navbar-default" id="toppage">
             <!-- <div class="container-fluid"> -->
             <div class="navbar-header">
                 <a class="navbar-brand" href="#">Vi-Linh Nguyen</a>
@@ -38,10 +38,10 @@
         <nav class="subnav">
             <ul class="nav nav-justified">
                 <li class="nav-item">
-                    <a class="nav-link" href="">Code</a>
+                    <a class="nav-link" href="#codeproj">Code</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="">Miscellaneous</a>
+                    <a class="nav-link" href="#miscproj">Miscellaneous</a>
                 </li>
             </ul>
         </nav>
@@ -59,7 +59,7 @@
             <!--end of intro-->
 
             <!--Code proj-->
-            <div id="programproj" class="container p-2">
+            <div id="codeproj" class="container p-2">
                 <div class="container text-center page-header">
                     <h4>Code</h4>
                 </div>
@@ -245,7 +245,7 @@
 
             <!--back to top-->
             <div class="col-lg-12 col-md-12 text-center">
-                <button class="btn-primary"><a href="">Back to Top</a></button>
+                <button class="btn-primary"><a href="#toppage">Back to Top</a></button>
             </div>
         </main>
         <!--end of main container-->
