added some more images

--- a/projects.html
+++ b/projects.html
@@ -196,7 +196,7 @@
             
                     <div id="project-grid-item" class="col-lg-6 col-md-6 mb-12 mb-md-0">
                         <a href="#">
-                            <img class="project-grid-item-img" src="" alt="Millicent's Eye" />
+                            <img class="project-grid-item-img" src="./assets/art/Millicent's Eye.jpg" alt="Millicent's Eye" />
                         </a>
                         <div class="overlay">
                             <div class="overlay-text">Millicent's Eye</div>
