some responsiveness to homepage

--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
     </nav>
 
     <!--main content-->
-    <main class="container p-1" id="mainhome">
+    <main class="container p-12 text-center" id="mainhome">
       <!--intro-->
-      <div class="row" id="introcontent">
+      <div class="row " id="introcontent">
         <div class="col-lg-12 col-md-12 mb-12 mb-md-0 page-header">
           <img class="doglogo" src="./assets/dogLOGO.png" alt="logo">
           <h3>Hello!</h3>
@@ -46,8 +46,8 @@
       <!--end of intro-->
 
       <!--project grid-->
-      <div class="container p-2">
-        <div id="project-grid" class="row text-center">
+      <div id="project-grid" class="container p-2 ">
+        <div class="row">
           <div id="project-grid-item" class="col-lg-6 col-md-6 mb-12 mb-md-0">
             <a href="#">
              <img class="project-grid-item-img" src="./assets/timeToTalk-itchioCoverArtboard-1.png" alt="time to talk"/>
