--- a/projects.html
+++ b/projects.html
@@ -244,7 +244,7 @@
             <!--end of misc proj-->
 
             <!--back to top-->
-            <div class="col-lg-12 col-md-12 text-center">
+            <div id="back-to-top" class="col-lg-12 col-md-12 text-center">
                 <button class="btn-primary"><a href="#toppage">Back to Top</a></button>
             </div>
         </main>
