delete some pages to add new individual project pages

--- a/projects.html
+++ b/projects.html
@@ -186,11 +186,12 @@
                     </div>
 
                     <div id="project-grid-item" class="col-lg-6 col-md-6 mb-12 mb-md-0">
-                        <a href="#">
-                            <img class="project-grid-item-img" src="./assets/art/ella-collab/foottown.jpg" alt="Chili Girl Film Pitch Collab" />
-                        </a>
+                        <img class="project-grid-item-img" src="./assets/art/ella-collab/foottown.jpg" alt="Chili Girl Film Pitch Collab" />
                         <div class="overlay">
-                            <div class="overlay-text">Chili Girl Film Pitch Collab</div>
+                            <a href="./pages/misc/filmCollabProj.html">
+                                <div class="overlay-text">Chili Girl Film Pitch Collab</div>
+                            </a>
+                            
                         </div>
                     </div>
             
