--- a/pages/misc/filmCollabProj.html
+++ b/pages/misc/filmCollabProj.html
@@ -28,7 +28,7 @@
         </div>
         <ul class="nav navbar-nav navbar-right">
             <li ><a href="/index.html">Home</a></li>
-            <li class="active"><a href="/projects.html">Projects</a></li>
+            <li><a href="/projects.html">Projects</a></li>
             <li><a href="/about.html">About</a></li>
         </ul>
         <!-- </div> -->
