add individual project pages skeletons

--- a/projects.html
+++ b/projects.html
@@ -68,7 +68,7 @@
                         <img class="project-grid-item-img" src="./assets/portfolio-site-old.jpg"
                                 alt="Portfolio Site Overhaul" />
                         <div class="overlay">
-                            <a href="#">
+                            <a href="./pages/code/portfolioOverhaul.html">
                                 <div class="overlay-text">Portfolio Site Overhaul</div>
                             </a>
                             
