--- a/pages/code/portfolioOverhaul.html
+++ b/pages/code/portfolioOverhaul.html
@@ -39,9 +39,12 @@
         <!--intro-->
         <div class="row " id="introcontent">
             <div class="col-lg-12 col-md-12 mb-12 mb-md-0 page-header">
-                <img class="doglogo" src="./assets/dogLOGO.png" alt="logo">
-                <h3>Header</h3>
-                <h4>...</h4>
+                <img class="doglogo" src="../../assets/dogLOGO.png" alt="logo">
+                <h3>Redesigning my website</h3>
+                <h4>
+                    I originally made this website based off an artist's own website I liked, but the layout no longer
+                    worked for me.
+                </h4>
             </div>
         </div>
         <!--end of intro-->
@@ -49,12 +52,76 @@
         <!--project desc-->
         <div class="container p-2 ">
             <div class="row">
+                <h4>The old website</h4>
                 <div class="col-lg-6 col-md-6 mb-12 mb-md-0">
-
+                    <img class="img-thumbnail" src="../../assets/portfolio-site-old.jpg" alt="old portfolio site"/>
                 </div>
-
+                <div class="col-lg-6 col-md-6 mb-12 mb-md-0">
+                    <p>
+                        The layout of my current website was looking outdated, so I decided to update the
+                        entire design of it. It would help the visual appeal but also help as an opportunity to
+                        practice more frontend development. As I explore more portfolio websites from different
+                        industries from animation to web development, I see the common trend of reducing the
+                        amount of clicks as possiblefor users interested in seeing what I have to offer. However,
+                        I also wish to show people who come to my website, my art. To keep my work organized,
+                        I have to categorize.
+                    </p>
+                </div>
             </div>
-            <!--end of project desc-->
+            <!--end of row-->
+
+            <div class="row">
+                <p>
+                    I decided to only feature a few prominent projects in a grid on the homepage. This way, users could get an idea of what
+                    I can do.
+                    <br/>
+                    The navigation bar would show the main pages of the website:
+                </p>
+            </div>
+            <!--end of row-->
+
+            <div class="row">
+                <!--homepage-->
+                <div class="col-lg-6 col-md-6 mb-12 mb-md-0">
+                    <img class="img-thumbnail" src="" alt="homepage wireframe" />
+                </div>
+                <div class="col-lg-6 col-md-6 mb-12 mb-md-0">
+                    <p>
+                        There’s the homepage (what users will first see when they arrive to my website).
+                    </p>
+                </div>
+            </div>
+            <!--end of row-->
+
+            <div class="row">
+                <!--project page-->
+                <div class="col-lg-6 col-md-6 mb-12 mb-md-0">
+                    <img class="img-thumbnail" src="" alt="project page wireframe" />
+                </div>
+                <div class="col-lg-6 col-md-6 mb-12 mb-md-0">
+                    <p>
+                        Here is the layout for a more full list of projects I’ve worked on.
+                    </p>
+                </div>
+            </div>
+            <!--end of row-->
+
+            <div class="row">
+                <!--about page-->
+                <div class="col-lg-6 col-md-6 mb-12 mb-md-0">
+                    <img class="img-thumbnail" src="" alt="about page wireframe" />
+                </div>
+                <div class="col-lg-6 col-md-6 mb-12 mb-md-0">
+                    <p>
+                        Lastly, I redesigned the page that would allow users a glimpse into who I am,
+                        along with a CV.
+                    </p>
+                </div>
+            </div>
+            <!--end of row-->
+
+        </div>
+        <!--end of project desc-->
     </main>
     <!--end of main container-->
 
