add wireframes to portfolio overhaul project page

--- a/pages/code/portfolioOverhaul.html
+++ b/pages/code/portfolioOverhaul.html
@@ -83,7 +83,7 @@
             <div class="row">
                 <!--homepage-->
                 <div class="col-lg-6 col-md-6 mb-12 mb-md-0">
-                    <img class="img-thumbnail" src="" alt="homepage wireframe" />
+                    <img class="img-thumbnail" src="../../assets/portfolioOverhaul/homepageWireframe.png" alt="homepage wireframe" />
                 </div>
                 <div class="col-lg-6 col-md-6 mb-12 mb-md-0">
                     <p>
@@ -96,7 +96,7 @@
             <div class="row">
                 <!--project page-->
                 <div class="col-lg-6 col-md-6 mb-12 mb-md-0">
-                    <img class="img-thumbnail" src="" alt="project page wireframe" />
+                    <img class="img-thumbnail" src="../../assets/portfolioOverhaul/projectsWireframe.png" alt="project page wireframe" />
                 </div>
                 <div class="col-lg-6 col-md-6 mb-12 mb-md-0">
                     <p>
@@ -109,7 +109,7 @@
             <div class="row">
                 <!--about page-->
                 <div class="col-lg-6 col-md-6 mb-12 mb-md-0">
-                    <img class="img-thumbnail" src="" alt="about page wireframe" />
+                    <img class="img-thumbnail" src="../../assets/portfolioOverhaul/aboutwireframe.png" alt="about page wireframe" />
                 </div>
                 <div class="col-lg-6 col-md-6 mb-12 mb-md-0">
                     <p>
