styling the portfolio overhaul page a bit

--- a/pages/code/portfolioOverhaul.html
+++ b/pages/code/portfolioOverhaul.html
@@ -50,8 +50,8 @@
         <!--end of intro-->
 
         <!--project desc-->
-        <div class="container p-2 ">
-            <div class="row">
+        <div id="project-desc" class="container p-2 ">
+            <div id="project-desc-intro" class="row">
                 <h4>The old website</h4>
                 <div class="col-lg-6 col-md-6 mb-12 mb-md-0">
                     <img class="img-thumbnail" src="../../assets/portfolio-site-old.jpg" alt="old portfolio site"/>
@@ -70,7 +70,7 @@
             </div>
             <!--end of row-->
 
-            <div class="row">
+            <div id="project-desc-intro" class="row">
                 <p>
                     I decided to only feature a few prominent projects in a grid on the homepage. This way, users could get an idea of what
                     I can do.
@@ -80,7 +80,7 @@
             </div>
             <!--end of row-->
 
-            <div class="row">
+            <div id="project-desc-block" class="row">
                 <!--homepage-->
                 <div class="col-lg-6 col-md-6 mb-12 mb-md-0">
                     <img class="img-thumbnail" src="../../assets/portfolioOverhaul/homepageWireframe.png" alt="homepage wireframe" />
@@ -93,7 +93,7 @@
             </div>
             <!--end of row-->
 
-            <div class="row">
+            <div id="project-desc-block" class="row">
                 <!--project page-->
                 <div class="col-lg-6 col-md-6 mb-12 mb-md-0">
                     <img class="img-thumbnail" src="../../assets/portfolioOverhaul/projectsWireframe.png" alt="project page wireframe" />
@@ -106,7 +106,7 @@
             </div>
             <!--end of row-->
 
-            <div class="row">
+            <div id="project-desc-block" class="row">
                 <!--about page-->
                 <div class="col-lg-6 col-md-6 mb-12 mb-md-0">
                     <img class="img-thumbnail" src="../../assets/portfolioOverhaul/aboutwireframe.png" alt="about page wireframe" />
