--- a/pages/code/twitterBookmarks.html
+++ b/pages/code/twitterBookmarks.html
@@ -37,24 +37,32 @@
     <!--main content-->
     <main class="container p-12 text-center" id="mainhome">
         <!--intro-->
-        <div class="row " id="introcontent">
+        <div  id="introcontent" class="row " id="introcontent">
             <div class="col-lg-12 col-md-12 mb-12 mb-md-0 page-header">
-                <img class="doglogo" src="./assets/dogLOGO.png" alt="logo">
-                <h3>Header</h3>
-                <h4>...</h4>
+                <img class="doglogo" src="../../assets/dogLOGO.png" alt="logo">
+                <h3>Storing my twitter bookmarks with react</h3>
+                <h4>The live site can be seen <a href="https://mybookmarksbylinh.netlify.app/">here</a></h4>
             </div>
         </div>
         <!--end of intro-->
 
         <!--project desc-->
-        <div class="container p-2 ">
-            <div class="row">
+        <div id="project-desc" class="container p-2 ">
+            <div id="project-desc-intro" class="row">
                 <div class="col-lg-6 col-md-6 mb-12 mb-md-0">
 
                 </div>
 
             </div>
-            <!--end of project desc-->
+            <!--end of row-->
+
+            <div id="project-desc-block" class="row">
+                <div class="col-lg-6 col-md-6 mb-12 mb-md-0">
+                    
+                </div>
+            </div>
+        </div>
+        <!--end of project desc-->
     </main>
     <!--end of main container-->
 
